--- a/Soberify BAC Tracker/AddDrink/AlcoholFieldTableViewCell.xib
+++ b/Soberify BAC Tracker/AddDrink/AlcoholFieldTableViewCell.xib
@@ -27,7 +27,7 @@
                         <rect key="frame" x="97.5" y="5" width="206.5" height="34"/>
                         <color key="textColor" name="AccentColor"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <textInputTraits key="textInputTraits"/>
+                        <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
                     </textField>
                 </subviews>
                 <constraints>
