--- a/Soberify BAC Tracker/Base.lproj/Main.storyboard
+++ b/Soberify BAC Tracker/Base.lproj/Main.storyboard
@@ -309,7 +309,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Details" largeTitleDisplayMode="always" id="kQz-7i-wBK">
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="edit" id="qiF-Oe-0Zh">
+                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="qiF-Oe-0Zh">
                             <connections>
                                 <segue destination="5ez-sT-w87" kind="presentation" id="cRU-Ks-XMa"/>
                             </connections>
@@ -379,7 +379,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Add Drink" id="9ua-Zw-p9z">
-                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="y5v-S9-xKd">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="y5v-S9-xKd">
                             <connections>
                                 <action selector="cancelAddDrink:" destination="g9p-1d-odP" id="l1o-Mn-KIa"/>
                             </connections>
@@ -532,13 +532,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Height (cm)" textAlignment="natural" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h8q-7W-c72">
-                                                    <rect key="frame" x="19.999999999999993" y="11" width="90.333333333333314" height="21"/>
+                                                    <rect key="frame" x="19.999999999999993" y="11" width="90.333333333333314" height="22"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" placeholder="e.g 180" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="n7M-5d-gNb">
-                                                    <rect key="frame" x="127.33333333333326" y="5" width="208.66666666666669" height="34"/>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" placeholder="e.g 180" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="n7M-5d-gNb">
+                                                    <rect key="frame" x="127.33333333333333" y="5" width="208.66666666666669" height="34"/>
                                                     <color key="textColor" systemColor="systemBlueColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
@@ -548,12 +548,13 @@
                                                 </textField>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="n7M-5d-gNb" secondAttribute="bottom" constant="5" id="4aO-Nm-UI1"/>
-                                                <constraint firstItem="n7M-5d-gNb" firstAttribute="leading" secondItem="h8q-7W-c72" secondAttribute="trailing" constant="20" id="9CI-IY-pqI"/>
-                                                <constraint firstItem="n7M-5d-gNb" firstAttribute="top" secondItem="skl-W8-s8b" secondAttribute="top" constant="5" id="DcQ-SP-bBo"/>
+                                                <constraint firstItem="n7M-5d-gNb" firstAttribute="centerY" secondItem="h8q-7W-c72" secondAttribute="centerY" id="Avz-0U-bzO"/>
                                                 <constraint firstItem="h8q-7W-c72" firstAttribute="top" secondItem="skl-W8-s8b" secondAttribute="topMargin" id="aXD-ph-iO5"/>
+                                                <constraint firstItem="n7M-5d-gNb" firstAttribute="centerY" secondItem="skl-W8-s8b" secondAttribute="centerY" id="lbC-cP-8t0"/>
+                                                <constraint firstItem="n7M-5d-gNb" firstAttribute="leading" secondItem="h8q-7W-c72" secondAttribute="trailing" constant="16.999999999999943" id="pwN-hc-CAK"/>
+                                                <constraint firstItem="n7M-5d-gNb" firstAttribute="top" secondItem="skl-W8-s8b" secondAttribute="topMargin" constant="-6" id="sQT-vO-ZvL"/>
                                                 <constraint firstItem="h8q-7W-c72" firstAttribute="leading" secondItem="skl-W8-s8b" secondAttribute="leadingMargin" id="uGO-FZ-tXP"/>
-                                                <constraint firstAttribute="trailing" secondItem="n7M-5d-gNb" secondAttribute="trailing" constant="16" id="vRH-jW-Bye"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="n7M-5d-gNb" secondAttribute="trailing" constant="-5.9999999999999432" id="zYv-24-Jbj"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -571,7 +572,7 @@
                                 <action selector="cancelEditing:" destination="gLH-m4-CuJ" id="awm-n9-x6m"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="done" id="XJT-ei-7cV">
+                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="XJT-ei-7cV">
                             <connections>
                                 <action selector="doneEditing:" destination="gLH-m4-CuJ" id="fWP-Un-L58"/>
                             </connections>
